# hubo-ach-ros-ompl-interface

hubo_ros_moveit/: test_file.txt
hubo_ros_moveit/hubo_ach_ros/: CMakeLists.txt  package.xml
hubo_ros_moveit/hubo_ach_ros/src/: hubo_ach_ros.cpp  hubo_ach_ros.cpp~  hubo_ach_ros_working.cpp~  hubo_float.cpp~
hubo_ros_moveit/hubo_actual_work/: CMakeLists.txt  package.xml
hubo_ros_moveit/hubo_actual_work/config/: controllers.yaml~  huboplus.srdf  joint_limits.yaml  ompl_planning.yaml  sensors_rgbd.yaml
hubo_ros_moveit/hubo_actual_work/launch/: default_warehouse_db.launch  demo.launch  hubo_check.launch  hubo_check.launch~  huboplus_moveit_controller_manager.launch~  huboplus_moveit_sensor_manager.launch~  move_group.launch  moveit_planning_execution_real.launch~  moveit_planning_execution_sim.launch  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
